--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-This is the home page, but there will be more articles
+<head>
+  <meta property="og:image" content="disqus-icon-dark.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+
+  <div>
+    This is the home page, but there will be more articles.
+  </div>
+  <div id="disqus_recommendations"></div>
+  <script>
+
+  (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://hovseptestrealm.disqus.com/recommendations.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+  })();
+  </script>
+  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</body>
