Add images to pilot and senate-compromise pages

--- a/pilot.html
+++ b/pilot.html
@@ -10,6 +10,8 @@
           </h1>
       </div>
 
+      <img src="https://am11.mediaite.com/med/cnt/uploads/2025/11/Screenshot-2025-11-10-at-10-47-32-AM.jpg" width="600"/>
+
       <p>An exasperated pilot urged flight passengers to “call your senator” amid shutdown delays, highlighting the frustration caused by the ongoing government shutdown.</p>
       <p>In the video posted to TikTok on Sunday, the unnamed Southwest Airlines pilot appeared outside the cockpit to level with passengers during what user gapster27 described as nothing short of a travel nightmare: “TSA took 2 hours… flight was delayed 2 hours… And now we will be sitting on the runway for 2 hours.”</p>
       <p>“I don’t really care what your political persuasion is, but you should really call your senator,” the pilot said. “Because, I’ll tell ya, this is costing the airlines millions of dollars.”</p>
