--- a/senate-compromise.html
+++ b/senate-compromise.html
@@ -10,6 +10,8 @@
           </h1>
       </div>
 
+      <img src="https://am12.mediaite.com/med/cnt/uploads/2025/11/buttigieg-1200x960.jpeg" width="600"/>
+
       <p>Pete Buttigieg joined the Democratic dissent over Sunday night’s Senate deal to reopen the government without any assurances about the future of health care.</p>
       <p>Buttigieg, who served as transportation secretary during the Biden administration, posted to X on Monday, “It’s a bad deal.”</p>
       <p>Buttigieg continued, “Everyday life – making it better and more affordable – must always be our bottom line. For months, I’ve been hearing from people bracing for their health insurance bills to skyrocket – so much that some will lose coverage altogether. Some say they simply haven’t even opened their letter yet, dreading the bad news. Any deal that fails to address this directly is a bad deal.”</p>
