--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
 <body>
 
   <div>
-    This is the home page, but there will be more articles.
+    <p>This is the home page, but there will be more articles.</p>
+    <p>Articles list:</p>
+    <ul>
+        <li><a href="pilot.html">WATCH: Exasperated Pilot Urges Flight Passengers to ‘Call Your Senator’ Amid Shutdown Delays</a></li>
+        <li><a href="senate-compromise.html">Buttigieg Slams Democrats’ Senate Compromise to Reopen the Government: ‘It’s a Bad Deal’</a></li>
+        <li><a href="alleged-heckler.html">ALLEGED HECKLER BUSTED ... After Viral Video of Antisemitic Taunts</a></li>
+        <li><a href="quiet-part.html">CNN Says the Quiet Part Out Loud After Democrats Join Republicans to Reopen Government (VIDEO)</a></li>
+        <li><a href="roguelike-fatigue.html">The Binding of Isaac Creator on Roguelike Fatigue in 2025 Indie Scene</a></li>
+    </ul>
   </div>
   <div id="disqus_recommendations"></div>
   <script>
