--- a/roguelike-fatigue.html
+++ b/roguelike-fatigue.html
@@ -96,7 +96,7 @@
   */
   var disqus_config = function () {
     this.page.url = window.location;  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = 'pilot'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    this.page.identifier = 'roguelike-fatigue'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
   };
   (function() { // DON'T EDIT BELOW THIS LINE
     var d = document, s = d.createElement('script');
