Add CSS styles for anchor tags in HTML file

--- a/alleged-heckler.html
+++ b/alleged-heckler.html
@@ -1,6 +1,11 @@
 <head>
   <meta property="og:image" content="https://imagez.tmz.com/image/a4/4by3/2025/11/10/a49b29c6a3734437b4bc640dd982fe83_md.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    a {
+      color: #2e9fff;
+    }
+  </style>
 </head>
 <body>
   <article>
