Update colors for all pages and hide pilot page from index

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <head>
   <meta property="og:image" content="disqus-icon-dark.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    a {
+      color: #2e9fff;
+    }
+  </style>
 </head>
 <body>
 
@@ -8,7 +13,7 @@
     <p>This is the home page, but there will be more articles.</p>
     <p>Articles list:</p>
     <ul>
-        <li><a href="pilot.html">WATCH: Exasperated Pilot Urges Flight Passengers to ‘Call Your Senator’ Amid Shutdown Delays</a></li>
+        <!-- <li><a href="pilot.html">WATCH: Exasperated Pilot Urges Flight Passengers to ‘Call Your Senator’ Amid Shutdown Delays</a></li> -->
         <li><a href="senate-compromise.html">Buttigieg Slams Democrats’ Senate Compromise to Reopen the Government: ‘It’s a Bad Deal’</a></li>
         <li><a href="alleged-heckler.html">ALLEGED HECKLER BUSTED ... After Viral Video of Antisemitic Taunts</a></li>
         <li><a href="quiet-part.html">CNN Says the Quiet Part Out Loud After Democrats Join Republicans to Reopen Government (VIDEO)</a></li>
