--- a/pilot.html
+++ b/pilot.html
@@ -1,6 +1,11 @@
 <head>
   <meta property="og:image" content="https://am11.mediaite.com/med/cnt/uploads/2025/11/Screenshot-2025-11-10-at-10-47-32-AM.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    a {
+      color: #2e9fff;
+    }
+  </style>
 </head>
 <body>
   <article>
