--- a/senate-compromise.html
+++ b/senate-compromise.html
@@ -1,6 +1,11 @@
 <head>
   <meta property="og:image" content="https://am12.mediaite.com/med/cnt/uploads/2025/11/buttigieg-1200x960.jpeg">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    a {
+      color: #2e9fff;
+    }
+  </style>
 </head>
 <body>
   <article>
