--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </ul>
   </div>
   <div id="disqus_recommendations"></div>
-  <script>
+  <!-- <script>
 
   (function() { // DON'T EDIT BELOW THIS LINE
     var d = document, s = d.createElement('script');
@@ -30,5 +30,5 @@
     (d.head || d.body).appendChild(s);
   })();
   </script>
-  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript> -->
 </body>
