Add manual poll

--- a/alleged-heckler.html
+++ b/alleged-heckler.html
@@ -17,6 +17,22 @@
 
       <img src="https://imagez.tmz.com/image/a4/4by3/2025/11/10/a49b29c6a3734437b4bc640dd982fe83_md.jpg" width="600"/>
 
+      <div class="disqus_poll" data-disqus-poll-id="universal"></div>
+      <script>
+          (function() {
+              if (document.getElementById('disqus_polls_script'))
+                // polls.js script already loaded, don't load a second time
+                return;
+              var d = document, s = d.createElement('script');
+              s.id = 'disqus_polls_script';
+              s.src = 'https://hovseptestrealm.disqus.com/polls.js';
+              (d.head || d.body).appendChild(s);
+          })();
+      </script>
+      <noscript>
+          Please enable JavaScript to view the poll powered by Disqus.
+      </noscript>
+    
       <p>The young man accused of throwing coins and yelling "F*** the Jews" at Dave Portnoy outside a Mississippi pizza shop has been charged in the high-profile case ... TMZ has learned.</p>
       <p>Brandon Lovelady -- Public Information Officer for the Starkville Police Department -- tells TMZ ... officers arrested 20-year-old Patrick McClintock on Monday and charged him with disturbing the peace.</p>
       <p>On Friday, cops became aware of the viral video showing the altercation and they issued an arrest warrant for McClintock, according to Lovelady.</p>
