Add new article link to genre-exploded

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><a href="alleged-heckler.html">ALLEGED HECKLER BUSTED ... After Viral Video of Antisemitic Taunts</a></li>
         <li><a href="quiet-part.html">CNN Says the Quiet Part Out Loud After Democrats Join Republicans to Reopen Government (VIDEO)</a></li>
         <li><a href="roguelike-fatigue.html">The Binding of Isaac Creator on Roguelike Fatigue in 2025 Indie Scene</a></li>
+        <li><a href="genre-exploded.html">This genre exploded on Steam in 2025 and proves we’re still resisting our grim reality</a></li>
     </ul>
   </div>
   <div id="disqus_recommendations"></div>
