Fix titles and add back recs

--- a/index.html
+++ b/index.html
@@ -19,15 +19,16 @@
         <li><a href="quiet-part.html">CNN Says the Quiet Part Out Loud After Democrats Join Republicans to Reopen Government (VIDEO)</a></li>
         <li><a href="roguelike-fatigue.html">The Binding of Isaac Creator on Roguelike Fatigue in 2025 Indie Scene</a></li>
         <li><a href="genre-exploded.html">This genre exploded on Steam in 2025 and proves we’re still resisting our grim reality</a></li>
-        <li><a href="boat-strikes.html">ALLEGED HECKLER BUSTED ... After Viral Video of Antisemitic Taunts</a></li>
-        <li><a href="border-czar.html">CNN Says the Quiet Part Out Loud After Democrats Join Republicans to Reopen Government (VIDEO)</a></li>
-        <li><a href="loyalty.html">The Binding of Isaac Creator on Roguelike Fatigue in 2025 Indie Scene</a></li>
-        <li><a href="netflix-chief.html">This genre exploded on Steam in 2025 and proves we’re still resisting our grim reality</a></li>
+        <li><a href="boat-strikes.html">‘Fentanyl Isn’t Being Manufactured in Venezuela’: Laura Loomer Hits DoD Over Drug Boat Strikes</a></li>
+        <li><a href="border-czar.html">‘He Called Them Garbage!’ CNN’s Dana Bash Tussles With Trump Border Czar Over Trump’s Rhetoric on Somalis</a></li>
+        <li><a href="loyalty.html">Trump Rages Against House Democrat He Just Pardoned: ‘Such a Lack of LOYALTY!’</a></li>
+        <li><a href="netflix-chief.html">Netflix Chief Met with Trump Before Outbidding Paramount in Warner Bros. Discovery Battle</a></li>
     </ul>
   </div>
-  <div id="disqus_recommendations"></div>
-  <!-- <script>
 
+  <div id="disqus_recommendations"></div>
+
+  <script>
   (function() { // DON'T EDIT BELOW THIS LINE
     var d = document, s = d.createElement('script');
     s.src = 'https://hovseptestrealm.disqus.com/recommendations.js';
@@ -35,5 +36,5 @@
     (d.head || d.body).appendChild(s);
   })();
   </script>
-  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript> -->
+  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </body>
