Add meta titles to pages

--- a/boat-strikes.html
+++ b/boat-strikes.html
@@ -1,5 +1,6 @@
 <head>
   <meta property="og:image" content="https://am14.mediaite.com/med/cnt/uploads/2025/11/AP25164591582591-1200x800.jpg">
+  <meta property="og:title" content="‘Fentanyl Isn’t Being Manufactured in Venezuela’: Laura Loomer Hits DoD Over Drug Boat Strikes">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     a {
