--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
   <meta property="og:image" content="disqus-icon-dark.png">
+  <meta property="og:title" content="Disqus Articles">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     a {
@@ -10,7 +11,7 @@
 <body>
 
   <div>
-    <p>This is the home page, but there will be more articles.</p>
+    <p>Welcome to the home page, check out these articles.</p>
     <p>Articles list:</p>
     <ul>
         <!-- <li><a href="pilot.html">WATCH: Exasperated Pilot Urges Flight Passengers to ‘Call Your Senator’ Amid Shutdown Delays</a></li> -->
