--- a/netflix-chief.html
+++ b/netflix-chief.html
@@ -1,5 +1,6 @@
 <head>
   <meta property="og:image" content="https://am14.mediaite.com/med/cnt/uploads/2025/12/Untitled-design-2025-12-08T103347-554-1200x675.jpg">
+  <meta property="og:title" content="Netflix Chief Met with Trump Before Outbidding Paramount in Warner Bros. Discovery Battle">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     a {
