--- a/alleged-heckler.html
+++ b/alleged-heckler.html
@@ -1,5 +1,6 @@
 <head>
   <meta property="og:image" content="https://imagez.tmz.com/image/a4/4by3/2025/11/10/a49b29c6a3734437b4bc640dd982fe83_md.jpg">
+  <meta property="og:title" content="ALLEGED HECKLER BUSTED ...">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     a {
@@ -32,7 +33,7 @@
       <noscript>
           Please enable JavaScript to view the poll powered by Disqus.
       </noscript>
-    
+
       <p>The young man accused of throwing coins and yelling "F*** the Jews" at Dave Portnoy outside a Mississippi pizza shop has been charged in the high-profile case ... TMZ has learned.</p>
       <p>Brandon Lovelady -- Public Information Officer for the Starkville Police Department -- tells TMZ ... officers arrested 20-year-old Patrick McClintock on Monday and charged him with disturbing the peace.</p>
       <p>On Friday, cops became aware of the viral video showing the altercation and they issued an arrest warrant for McClintock, according to Lovelady.</p>
