--- a/alleged-heckler.html
+++ b/alleged-heckler.html
@@ -1,6 +1,7 @@
 <head>
   <meta property="og:image" content="https://imagez.tmz.com/image/a4/4by3/2025/11/10/a49b29c6a3734437b4bc640dd982fe83_md.jpg">
   <meta property="og:title" content="ALLEGED HECKLER BUSTED ...">
+  <title>ALLEGED HECKLER BUSTED ...</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     a {
