--- a/border-czar.html
+++ b/border-czar.html
@@ -1,6 +1,7 @@
 <head>
   <meta property="og:image" content="https://assets-jpcust.jwpsrv.com/thumbnails/u4csmw5w-720.jpg">
   <meta property="og:title" content="‘He Called Them Garbage!’ CNN’s Dana Bash Tussles With Trump Border Czar Over Trump’s Rhetoric on Somalis">
+  <title>‘He Called Them Garbage!’ CNN’s Dana Bash Tussles With Trump Border Czar Over Trump’s Rhetoric on Somalis</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     a {
