--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
   <meta property="og:image" content="disqus-icon-dark.png">
   <meta property="og:title" content="Disqus Articles">
+  <title>Disqus Articles</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     a {
