--- a/loyalty.html
+++ b/loyalty.html
@@ -1,6 +1,7 @@
 <head>
   <meta property="og:image" content="https://am13.mediaite.com/med/cnt/uploads/2025/12/Screen-Shot-2025-12-07-at-8-29-42-AM-scaled-e1765114243106.jpg">
   <meta property="og:title" content="Trump Rages Against House Democrat He Just Pardoned: ‘Such a Lack of LOYALTY!’">
+  <title>Trump Rages Against House Democrat He Just Pardoned: ‘Such a Lack of LOYALTY!’</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     a {
