--- a/pilot.html
+++ b/pilot.html
@@ -1,6 +1,7 @@
 <head>
   <meta property="og:image" content="https://am11.mediaite.com/med/cnt/uploads/2025/11/Screenshot-2025-11-10-at-10-47-32-AM.jpg">
   <meta property="og:title" content="WATCH: Exasperated Pilot Urges Flight Passengers to ‘Call Your Senator’ Amid Shutdown Delays">
+  <title>WATCH: Exasperated Pilot Urges Flight Passengers to ‘Call Your Senator’ Amid Shutdown Delays</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     a {
