--- a/senate-compromise.html
+++ b/senate-compromise.html
@@ -1,6 +1,7 @@
 <head>
   <meta property="og:image" content="https://am12.mediaite.com/med/cnt/uploads/2025/11/buttigieg-1200x960.jpeg">
   <meta property="og:title" content="Buttigieg Slams Democrats’ Senate Compromise to Reopen the Government: ‘It’s a Bad Deal’">
+  <title>Buttigieg Slams Democrats’ Senate Compromise to Reopen the Government: ‘It’s a Bad Deal’</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     a {
