--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <li><a href="border-czar.html">‘He Called Them Garbage!’ CNN’s Dana Bash Tussles With Trump Border Czar Over Trump’s Rhetoric on Somalis</a></li>
         <li><a href="loyalty.html">Trump Rages Against House Democrat He Just Pardoned: ‘Such a Lack of LOYALTY!’</a></li>
         <li><a href="netflix-chief.html">Netflix Chief Met with Trump Before Outbidding Paramount in Warner Bros. Discovery Battle</a></li>
+        <li><a href="paramount.html">Paramount Bid for Warner Bros Fueled by Billions in Foreign Money and Jared Kushner’s Private Equity Firm</a></li>
     </ul>
   </div>
 
