Add hot-mic page

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <li><a href="loyalty.html">Trump Rages Against House Democrat He Just Pardoned: ‘Such a Lack of LOYALTY!’</a></li>
         <li><a href="netflix-chief.html">Netflix Chief Met with Trump Before Outbidding Paramount in Warner Bros. Discovery Battle</a></li>
         <li><a href="paramount.html">Paramount Bid for Warner Bros Fueled by Billions in Foreign Money and Jared Kushner’s Private Equity Firm</a></li>
+        <li><a href="hot-mic.html">Hot Mic Catches Trump Lashing Out Over Failed Picks: ‘I Can’t Appoint Anybody!’</a></li>
     </ul>
   </div>
 
